--- a/RuskinDantra.Extensions/RuskinDantra.Extensions.nuspec
+++ b/RuskinDantra.Extensions/RuskinDantra.Extensions.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package >
 	<metadata>
-		<id>$id$</id>
+		<id>RuskinDantra.Extensions</id>
 		<version>$version$</version>
 		<title>$title$</title>
 		<authors>Ruskin Dantra</authors>
