--- a/RuskinDantra.Extensions/RuskinDantra.Extensions.nuspec
+++ b/RuskinDantra.Extensions/RuskinDantra.Extensions.nuspec
@@ -12,11 +12,11 @@
 		<description>Some common extensions used by Ruskin Dantra during the course of his coding life</description>
 		<copyright>Copyright ©  2016 Ruskin Dantra</copyright>
 		<tags>CSharp extensions</tags>
+		<releaseNotes>
+			3-Jan-16
+				* Added HasInterface extension method
+		</releaseNotes>
 	</metadata>
-	<releaseNotes>
-		3-Jan-16
-			Added HasInterface extension method
-	</releaseNotes>
 	<files>
 		<file src="\bin\debug\RuskinDantra.Extensions.dll" target="lib\net452" />
 	</files>
