--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,13 +1,22 @@
 version: 1.0.{build}
 os: Visual Studio 2015
+assembly_info:
+  patch: true
+  file: '**\AssemblyInfo.*'
+  assembly_version: '{version}'
+  assembly_file_version: '{version}'
+  assembly_informational_version: '{version}'
 configuration: Release
 build:
   verbosity: minimal
+  artifacts:
+  - path: RuskinDantra.Extensions.nupkg
+  name: Nuget Package
 before_build: 
   - nuget restore Extensions.sln
 after_build:
-  - nuget pack RuskinDantra.Extensions\RuskinDantra.Extensions.nuspec -Version %appveyor_build_version%
-  - appveyor PushArtifact RuskinDantra.Extensions.%appveyor_build_version%.nupkg
+  #- nuget pack RuskinDantra.Extensions\RuskinDantra.Extensions.nuspec -Version %appveyor_build_version%
+  #- appveyor PushArtifact RuskinDantra.Extensions.%appveyor_build_version%.nupkg
 deploy:
   provider: NuGet
   api_key:
