--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,8 +10,8 @@ configuration: Release
 before_build: 
   - nuget restore Extensions.sln
 after_build:
-  #- nuget pack RuskinDantra.Extensions\RuskinDantra.Extensions.nuspec -Version %appveyor_build_version%
-  #- appveyor PushArtifact RuskinDantra.Extensions.%appveyor_build_version%.nupkg
+  - nuget pack RuskinDantra.Extensions\RuskinDantra.Extensions.nuspec -Version %appveyor_build_version%
+  - appveyor PushArtifact RuskinDantra.Extensions.%appveyor_build_version%.nupkg
 deploy:
   provider: NuGet
   api_key:
