Added some more extensions to the project

--- a/RuskinDantra.Extensions.UnitTests/RuskinDantra.Extensions.UnitTests.csproj
+++ b/RuskinDantra.Extensions.UnitTests/RuskinDantra.Extensions.UnitTests.csproj
@@ -52,6 +52,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="byte_extensions.cs" />
+    <Compile Include="object_extensions.cs" />
     <Compile Include="type_extensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
