Adding XML serialization and deserialization extension methods

--- a/RuskinDantra.Extensions/RuskinDantra.Extensions.csproj
+++ b/RuskinDantra.Extensions/RuskinDantra.Extensions.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ByteExtensions.cs" />
+    <Compile Include="DataStructures\XmlSerializableInterfaceList.cs" />
     <Compile Include="ObjectExtensions.cs" />
     <Compile Include="TypeExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
