--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,9 @@ version: 1.0.{build}
 branches:
   only:
   - master
-os: Visual Studio 2015
+os:
+  - Visual Studio 2015
+  - Windows Server 2012 R2
 assembly_info:
   patch: true
   file: '**\AssemblyInfo.*'
