--- a/RuskinDantra.Extensions/RuskinDantra.Extensions.csproj
+++ b/RuskinDantra.Extensions/RuskinDantra.Extensions.csproj
@@ -101,8 +101,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Framework)' == 'NET40' And '$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-	<PlatformTarget>AnyCPU</PlatformTarget>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\$(Configuration)\$(Framework)\</OutputPath>
@@ -113,7 +113,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Framework)' == 'NET45' And '$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-	<PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\$(Configuration)\$(Framework)\</OutputPath>
@@ -124,7 +124,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Framework)' == 'NET451' And '$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
-	<PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\$(Configuration)\$(Framework)\</OutputPath>
@@ -135,7 +135,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Framework)' == 'NET452' And '$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
-	<PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\$(Configuration)\$(Framework)\</OutputPath>
@@ -146,7 +146,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Framework)' == 'NET46' And '$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
-	<PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\$(Configuration)\$(Framework)\</OutputPath>
@@ -182,6 +182,7 @@
   <ItemGroup>
     <Compile Include="ByteExtensions.cs" />
     <Compile Include="DataStructures\XmlSerializableInterfaceList.cs" />
+    <Compile Include="EnumerableExtensions.cs" />
     <Compile Include="ObjectExtensions.cs" />
     <Compile Include="TypeExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -197,7 +198,7 @@
   </Target>
   -->
   <Target Name="AfterBuild">
-	<MSBuild Condition="'$(NET40RUN)' != 'True'" Projects="$(MSBuildProjectFile)" Properties="Framework=NET40;NET40RUN=True" RunEachTargetSeparately="true" Targets="Rebuild" />
+    <MSBuild Condition="'$(NET40RUN)' != 'True'" Projects="$(MSBuildProjectFile)" Properties="Framework=NET40;NET40RUN=True" RunEachTargetSeparately="true" Targets="Rebuild" />
     <MSBuild Condition="'$(NET45RUN)' != 'True'" Projects="$(MSBuildProjectFile)" Properties="Framework=NET45;NET45RUN=True" RunEachTargetSeparately="true" Targets="Rebuild" />
     <MSBuild Condition="'$(NET451RUN)' != 'True'" Projects="$(MSBuildProjectFile)" Properties="Framework=NET451;NET451RUN=True" RunEachTargetSeparately="true" Targets="Rebuild" />
     <MSBuild Condition="'$(NET452RUN)' != 'True'" Projects="$(MSBuildProjectFile)" Properties="Framework=NET452;NET452RUN=True" RunEachTargetSeparately="true" Targets="Rebuild" />
