Added extra options into the serialize method to omit ns and also the ability to pass extra settings if required

--- a/RuskinDantra.Extensions.UnitTests/RuskinDantra.Extensions.UnitTests.csproj
+++ b/RuskinDantra.Extensions.UnitTests/RuskinDantra.Extensions.UnitTests.csproj
@@ -62,6 +62,7 @@
     <Compile Include="byte_extensions.cs" />
     <Compile Include="enumerable_extensions.cs" />
     <Compile Include="object_extensions.cs" />
+    <Compile Include="string_extensions.cs" />
     <Compile Include="type_extensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
