--- a/RuskinDantra.Extensions/RuskinDantra.Extensions.csproj
+++ b/RuskinDantra.Extensions/RuskinDantra.Extensions.csproj
@@ -184,6 +184,7 @@
     <Compile Include="DataStructures\XmlSerializableInterfaceList.cs" />
     <Compile Include="EnumerableExtensions.cs" />
     <Compile Include="ObjectExtensions.cs" />
+    <Compile Include="StringExtensions.cs" />
     <Compile Include="TypeExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
