--- a/RuskinDantra.Extensions/RuskinDantra.Extensions.nuspec
+++ b/RuskinDantra.Extensions/RuskinDantra.Extensions.nuspec
@@ -13,15 +13,18 @@
 		<copyright>Copyright ©  2016 Ruskin Dantra</copyright>
 		<tags>CSharp extensions</tags>
 		<releaseNotes>
-			3-Jan-16
-			* Added HasInterface extension method
-			--------
-			3-Apr-16
-			* Added extension methods to get attribute from type and member info objects
-			--------
-			20-Apr-16
-			* Added eventhandler extension to raise if event is wired
-		</releaseNotes>
+      3-Jan-16
+      * Added HasInterface extension method
+      --------
+      3-Apr-16
+      * Added extension methods to get attribute from type and member info objects
+      --------
+      20-Apr-16
+      * Added eventhandler extension to raise if event is wired
+      --------
+      11-Jun-16
+      * Added extension method to return an array of indexes where repeats occur
+    </releaseNotes>
 		<dependencies>
 			<dependency id="JetBrains.Annotations" version="10.0.0" />
 		</dependencies>
