--- a/RuskinDantra.Extensions/RuskinDantra.Extensions.nuspec
+++ b/RuskinDantra.Extensions/RuskinDantra.Extensions.nuspec
@@ -24,6 +24,9 @@
       --------
       11-Jun-16
       * Added extension method to return an array of indexes where repeats occur
+      --------
+      01-Jul-16
+      * Added extension method to allow us to keep X number of first items in a collection
     </releaseNotes>
 		<dependencies>
 			<dependency id="JetBrains.Annotations" version="10.0.0" />
